RESOLVED FIXED44711
User scripts injected at start are not run for plugin and media documents
https://bugs.webkit.org/show_bug.cgi?id=44711
Summary User scripts injected at start are not run for plugin and media documents
Brian Weinstein
Reported 2010-08-26 13:06:41 PDT
User scripts injected at start are not run for plugin and media documents.
Attachments
[PATCH] Fix (2.38 KB, patch)
2010-08-26 13:12 PDT, Brian Weinstein
aroben: review+
bweinstein: commit-queue-
Brian Weinstein
Comment 1 2010-08-26 13:06:55 PDT
Brian Weinstein
Comment 2 2010-08-26 13:12:15 PDT
Created attachment 65605 [details] [PATCH] Fix
Adam Roben (:aroben)
Comment 3 2010-08-26 13:13:30 PDT
Comment on attachment 65605 [details] [PATCH] Fix I wonder if we should try to share the common code between ImageDocument, MediaDocument, and PluginDocument. r=me
Brian Weinstein
Comment 4 2010-08-26 13:14:28 PDT
(In reply to comment #3) > (From update of attachment 65605 [details]) > I wonder if we should try to share the common code between ImageDocument, MediaDocument, and PluginDocument. There seems to be a lot of common code in there. I will file a bug. > > r=me Thanks!
Brian Weinstein
Comment 5 2010-08-26 13:21:18 PDT
Landed in r66129.
Note You need to log in before you can comment on or make changes to this bug.