User scripts injected at start are not run for plugin and media documents <https://bugs.webkit.org/show_bug.cgi?id=44711> <rdar://problem/8359288>

Reviewed by Adam Roben.

http://trac.webkit.org/changeset/61271 made scripts injected at start run on ImageDocuments,
but didn't implement this behavior for MediaDocuments and PluginDocuments.

* loader/MediaDocument.cpp:
(WebCore::MediaDocumentParser::createDocumentStructure): Make sure we fire dispatchDocumentElementAvailable.
* loader/PluginDocument.cpp:
(WebCore::PluginDocumentParser::createDocumentStructure): Ditto.



Canonical link: https://commits.webkit.org/56901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66129 268f45cc-cd09-0410-ab3c-d52691b4dbfc